# lang-rs

./: Cargo.toml
src/: lexer.rs  main.rs  parser.rs  syntax.rs
src/parser/: event.rs  expr.rs  marker.rs  sink.rs  source.rs
