[package]
name = "lang-rs-2"
version = "0.1.0"
authors = ["Scott Newcomer <snewcomer24@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop_bomb = "0.1.5"
logos = "0.11.4"
rowan = "0.10.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
expect-test = "1.0.1"

